vuruap/rozdział 10/Uruchomienie narz©dzia do skracania link¢w/yourls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yourls
  labels: 
    app: yourls-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: yourls-front
  template:
    metadata:
      labels:
        app: yourls-front
    spec:
      containers:
      - name: yourls
        image: yourls:1.7.4-apache
        ports:
        - containerPort: 80
          name: yourls-port
