vuruap/rozdział 10/Uruchomienie narz©dzia do skracania link¢w/yourls-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: short.zylowski.net
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - short.zylowski.net
    secretName: short.zylowski.net
  rules:
  - host: short.zylowski.net
    http:
      paths:
      - path: /
        backend:
          serviceName: yourls
          servicePort: 80
